2002-09-05  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (get_symbolicname): New function.
	(remove_tmpfile): Print tmp file names if BO_DEBUG is 1.
	(output_pstoedit_writer): Use two temporary files to keep 
	both the command line syntax of autotrace and the 
	pstoedit API. 
	(output_pstoedit_suffix): New variable.

	* output.c (streq): New function.
	(at_output_get_handler_by_suffix): Call 
	output_pstoedit_set_last_suffix.
	(at_output_list_new): Use both suffixes and symbolicnames.
	(at_output_shortlist): Likewise.
	(output_is_static_member): Check both suffixes and symbolicnames.

	* output-pstoedit.[ch] (output_pstoedit_set_last_suffix): 
	New function.

	* main.c (output_list_formats): gave more
	spaces to the output formats.

2002-08-27  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: 0.30.3.
	library version is set to 1.0.1.

	* logreport.h (at_log_file): Renamed from
	log_file. I guess the symbol `log_file'
	conflicts with something defined on debian libc.

2002-07-10  Martin Weber <martweb@gmx.net>

	* output.c (at_spline_list_foreach, at_spline_list_array_foreach): 
	Added "unsigned" to `i`.
	included strgicmp.h.

	Message-ID: <3D2B3A63.9B8AE188@gmx.net>.
	
2002-07-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.2.

2002-07-01  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Don't use libdir value defined
	in libMagick.al.

	* output-pstoedit.h: Include pstoedit/pstoedit.h.

	* Makefile.am: improved pstoedit supports.

	* autotrace-config.af: Refer LIBPSTOEDIT_LIBS.

	* autotrace.pc.in (Libs): Likewise.

2002-06-30  Masatake YAMATO  <yamato@redhat.com>

	* output.c (at_*_get_handler_by_suffix): Return 
	NULL if suffix is NULL pointer or an empty string.

	* input.c (at_input_list_new): Pass both NULL and "*"
	to GetMagickInfo. Suggested by valhalla@imagemagick.org
	on magick-users@imagemagick.org.

	* Makefile.am (EXTRA_DIST): Added autotrace-config.in.

	* autotrace.c: Remove make_string.
